# mini-DNS

./: README.md  main.py  pyproject.toml
app/: app.py  db.py  dns_logic.py  schemas.py
tests/: conftest.py  test_endpoints.py  test_validation.py
